額外系所名額相關更新
有額外系所的頁面顯示各種系所名額，儲存與鎖定時會檢查是否符合條件
表單格式更新

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -67,20 +67,20 @@
 	</div>
 	<div class="col-md-5 col-6 text-right">
 		<div class="form-group">
-			<input id="dept-filter-input" class="form-control" type="text" placeholder="搜尋">
+			<input id="dept-filter-input" class="form-control" type="text" placeholder="可輸入代碼或名稱搜尋">
 		</div>
 	</div>
 </div>
 
 <table id="dept-list" class="table table-hover sortable">
-	<thead>
+	<thead class="table-warning">
 		<tr>
-			<th data-defaultsign='nospan'></th>
-			<th>#</th>
-			<th>代碼</th>
+			<th data-defaultsign='nospan' style="width:3%"></th>
+			<th style="width:5%">#</th>
+			<th style="width:7%">代碼</th>
 			<th>名稱</th>
-			<th>上次編輯者</th>
-			<th>上次編輯時間</th>
+			<th style="width:10%">上次編輯者</th>
+			<th style="width:15%">上次編輯時間</th>
 		</tr>
 	</thead>
 	<tbody>
