--- a/quotaDistributionTwoYear.ejs
+++ b/quotaDistributionTwoYear.ejs
@@ -1,1 +1,2 @@
 <%- include ('components/_quotaDistribution', {system: '港二技'}) %>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-filestyle/1.3.0/bootstrap-filestyle.min.js"> </script>
