--- a/css/quotaDistributionTwoYear.css
+++ b/css/quotaDistributionTwoYear.css
@@ -42,3 +42,11 @@ a {
 .selfSumDiv {
     width: 19%;
 }
+
+.not_extended_department_quota{
+    width: 26%;
+}
+
+.allowTotalDiv{
+    width: 16%;
+}
