--- a/login.ejs
+++ b/login.ejs
@@ -73,11 +73,12 @@
 						112 學年度僑、港澳生招生管道說明及管道圖
 					</a>
 				</li>
-				<!-- <li class="list-group-item">
-					<a target="_blank" href="https://ior.ad/7ESG">
-						112 學年度名額暨簡章調查系統操作手冊（公文附件二）
+				<li class="list-group-item">
+					<a target="_blank" href="https://docs.google.com/presentation/d/10sKTMXm9VLUdhg-Y8OfN-MRosvmanv-O/edit?usp=sharing&ouid=112204737523361756979&rtpof=true&sd=true">
+						112 學年度名額暨簡章調查系統操作手冊
 					</a>
 				</li>
+				<!-- 
 				<li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
 						系統操作問題諮詢視訊會議連結（8/16 上午 10:30）
