--- a/css/quotaDistributionPhd.css
+++ b/css/quotaDistributionPhd.css
@@ -53,3 +53,11 @@ thead tr th {
 .allowTotalDiv{
     width: 19%;
 }
+
+.general_department_self_enrollment_div{
+    width: 19%;
+}
+
+.main_industries_department_self_enrollment_div{
+    width: 19%;
+}
