--- a/index.ejs
+++ b/index.ejs
@@ -40,21 +40,21 @@
 	<div class="row">
 		<div id="phoneForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校電話號碼*</label>
-			<input id="phone" type="tel" class="form-control">
+			<input maxlength="191" id="phone" type="tel" class="form-control">
 		</div>
 		<div id="faxForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校傳真號碼*</label>
-			<input id="fax" type="tel" class="form-control">
+			<input maxlength="191" id="fax" type="tel" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div id="urlForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校中文網址*</label>
-			<input id="url" type="url" class="form-control">
+			<input maxlength="191" id="url" type="url" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">學校英文網址*</label>
-			<input id="engUrl" type="url" class="form-control">
+			<input maxlength="191" id="engUrl" type="url" class="form-control">
 		</div>
 	</div>
 	<div class="row">
@@ -66,17 +66,17 @@
 	<div class="row">
 		<div id="engAddressForm" class="form-group col-12">
 			<label class="form-control-label text-danger" for="">學校英文地址*</label>
-			<input id="engAddress" type="text" class="form-control">
+			<input maxlength="191" id="engAddress" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div id="organizationForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">承辦單位中文名稱*</label>
-			<input id="organization" type="text" class="form-control">
+			<input maxlength="191" id="organization" type="text" class="form-control">
 		</div>
 		<div id="engOrganizationForm" class="form-group col-6">
 			<label class="form-control-label text-danger" for="">承辦單位英文名稱*</label>
-			<input id="engOrganization" type="text" class="form-control">
+			<input maxlength="191" id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
 
@@ -141,21 +141,21 @@
 						<div class="row">
 							<div id="scholarshipDeptForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">獎學金負責單位中文名稱*</label>
-								<input id="scholarshipDept" type="text" class="form-control">
+								<input maxlength="191" id="scholarshipDept" type="text" class="form-control">
 							</div>
 							<div id="engScholarshipDeptForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">獎學金負責單位英文名稱*</label>
-								<input id="engScholarshipDept" type="text" class="form-control">
+								<input maxlength="191" id="engScholarshipDept" type="text" class="form-control">
 							</div>
 						</div>
 						<div class="row">
 							<div id="scholarshipUrlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">僑生專屬獎學金中文說明網址*</label>
-								<input id="scholarshipUrl" type="text" class="form-control">
+								<input maxlength="191" id="scholarshipUrl" type="text" class="form-control">
 							</div>
 							<div id="engScholarshipUrlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">僑生專屬獎學金英文說明網址*</label>
-								<input id="engScholarshipUrl" type="text" class="form-control">
+								<input maxlength="191" id="engScholarshipUrl" type="text" class="form-control">
 							</div>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 						<div class="row">
 							<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
 								<label class="form-control-label text-danger" for="">教育部核定單招公文發文日期及文號 *</label>
-								<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
+								<input maxlength="191" id="approvalNoOfSelfEnrollment" type="text" class="form-control">
 							</div>
 						</div>
 						<div class="row">
