系所詳細資料編輯模板的額外系所標籤根據類型顏色會不同

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -127,7 +127,7 @@
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
-								<label class="form-control-label" for="">核定系名 <span class="badge badge-warning" id="extendedTag"></span></label>
+								<label class="form-control-label" for="">核定系名 <span class="badge" id="extendedTag"></span></label>
 								<input type="text" class="form-control" id="titleMain" disabled>
 							</div>
 							<div id="engTitleForm" class="form-group col-6">
